# smart-agriculture

./: .dockerignore  .env.example  .gitignore  README.md  package.json
apps/agent/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
apps/agent/app/: __init__.py  main.py
apps/agent/tests/: support_repositories.py  test_agent_api_unittest.py  test_agent_flow_behavior_unittest.py  test_agent_loop_service_unittest.py  test_agent_service_contract_unittest.py  test_agent_service_unittest.py  test_agent_summary_unittest.py  test_business_answer_renderer_unittest.py  test_conversation_boundary_unittest.py  test_conversation_history_unittest.py  test_data_answer_service_unittest.py  test_debug_service_unittest.py  test_fact_check_service_unittest.py  test_flow_contract_unittest.py  test_follow_up_action_resolver_service_unittest.py  test_follow_up_intent_resolver_service_unittest.py  test_formal_acceptance_report_unittest.py  test_input_guard_service_unittest.py  test_llm_follow_up_resolver_service_unittest.py  test_llm_input_guard_service_unittest.py  test_llm_template_contract_unittest.py  test_p0_truthfulness_regression.py  test_parameter_resolver_time_unittest.py  test_plan3_matrix_contract_unittest.py  test_plan_alignment_unittest.py  test_query_log_repository_unittest.py  test_query_profile_governance_unittest.py  test_region_alias_resolution_unittest.py  test_requirements_unittest.py  test_result_snapshot_repository_unittest.py  test_runtime_alignment_unittest.py  test_semantic_parser_service_unittest.py  test_session_context_repository_unittest.py  (+11 more)
(+358 files in other folders)
