[project]
name = "soil-moisture-agent"
version = "0.1.0"
description = "Smart Agriculture soil moisture agent"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn",
  "pydantic>=2",
  "pydantic-settings",
  "sqlalchemy>=2",
  "asyncmy",
  "httpx",
  "structlog",
  "jinja2",
  "pymysql",
  "redis",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
